fix or condition

--- a/src/_data/speakers.yml
+++ b/src/_data/speakers.yml
@@ -47,7 +47,7 @@
   last_name: Lindfield Seager
   type: speaker
   photo_url: /images/speakers/matthew-ls.jpg
-  website: http://matt17r.com
+  website: https://matt17r.com
   bio: Matthew is a jack of all trades technologist and developer. He enjoys reading novels, playing sport, running and any activity involving his wife and two teenage children.
 - id: helio-cola
   first_name: Helio
