--- a/src/_data/sponsors.yml
+++ b/src/_data/sponsors.yml
@@ -1,5 +1,5 @@
 - name: AppSignal
-  about: "Monitor your apps from A to Z: error tracking, performance insights, server metrics, uptime pages, custom dashboards, and more. AppSignal works for all popular Ruby frameworks and automatically instruments and creates beautiful dashboards for Sidekiq, Active Job, and other integrations."
+  about: "Monitor your apps from A to Z: error tracking, performance insights, server metrics, uptime pages, logging, and more. AppSignal works for all popular Ruby frameworks and automatically instruments and creates beautiful dashboards for Sidekiq, Active Job, and other integrations."
   logo_url: /images/sponsors/appsignal.svg
   url: "https://www.appsignal.com/"
   level: silver
