Add Ben Halpern's keynote title

--- a/src/_data/schedule/day_two.yml
+++ b/src/_data/schedule/day_two.yml
@@ -65,7 +65,7 @@
 #   youtube_id:
 - start_at: "16:10"
   end_at: "16:55"
-  title: "Keynote"
+  title: "Keynote: Thriving in Uncertainty"
   speaker_id: ben-halpern
 - start_at: "17:00"
   end_at: "17:10"
