--- a/src/_data/schedule/day_two.yml
+++ b/src/_data/schedule/day_two.yml
@@ -1,23 +1,72 @@
-# - start_at: "8:00"
-#   end_at: "9:00"
-#   title: "Conference Door Opens"
-# - start_at: "9:00"
-#   end_at: "9:10"
-#   title: "Welcome Address"
-# - start_at: 
-#   end_at: 
-#   title: 
-#   speaker_id: 
-#   youtube_id: 
-# - start_at: "10:30"
-#   end_at: "10:50"
-#   title: "Coffee Break"
-# - start_at: "12:30"
-#   end_at: "13:50"
-#   title: "Buffet Lunch"
-# - start_at: "15:05"
-#   end_at: "15:35"
-#   title: "Coffee Break"
-# - start_at: "17:00"
-#   end_at: "17:10"
-#   title: "Closing remarks & announcements"
+- start_at: "8:00"
+  end_at: "9:00"
+  title: "Conference Door Opens"
+- start_at: "9:00"
+  end_at: "9:10"
+  title: "Welcome Address"
+- start_at: "9:10"
+  end_at: "9:55"
+  title: "Keynote"
+  speaker_id: jemma-issroff
+#   slides_url:
+#   youtube_id:
+- start_at: "10:00"
+  end_at: "10:30"
+  title: "A Beginner's Complete Guide to Microcontroller Programming with Ruby"
+  speaker_id: hitoshi-hasumi
+#   slides_url:
+#   youtube_id:
+- start_at: "10:30"
+  end_at: "10:50"
+  title: "Coffee Break"
+- start_at: "10:50"
+  end_at: "11:20"
+  title: "Avoiding Disaster: Practical Strategies for Incident Prevention"
+  speaker_id: huy-du
+#   slides_url:
+#   youtube_id:
+- start_at: "11:25"
+  end_at: "11:55"
+  title: "Event Streaming Patterns for Ruby Services"
+  speaker_id: brad-urani
+#   slides_url:
+#   youtube_id:
+- start_at: "12:00"
+  end_at: "12:30"
+  title: "The Art of Abstracting: Key Factors for Success in a Core/Platform/BuildingBlocks team"
+  speaker_id: omar-sotillo-franco
+#   slides_url:
+#   youtube_id:
+- start_at: "12:30"
+  end_at: "13:50"
+  title: "Buffet Lunch"
+- start_at: "14:00"
+  end_at: "14:30"
+  title: "Kickboxer vs Ruby - the state of MRuby, JRuby and CRuby"
+  speaker_id:
+    - michael-milewski
+    - selena-small
+#   slides_url:
+#   youtube_id:
+- start_at: "14:35"
+  end_at: "15:05"
+  title: "The world of Passkeys 🤝🏽 Ruby"
+  speaker_id: helio-cola
+#   slides_url:
+#   youtube_id:
+- start_at: "15:05"
+  end_at: "15:35"
+  title: "Coffee Break"
+- start_at: "15:35"
+  end_at: "16:05"
+  title: "Rails Performance Monitoring 101: A Primer for Developers"
+  speaker_id: rishi-jain
+#   slides_url:
+#   youtube_id:
+- start_at: "16:10"
+  end_at: "16:55"
+  title: "Keynote: Thriving in Uncertainty"
+  speaker_id: ben-halpern
+- start_at: "17:00"
+  end_at: "17:10"
+  title: "Closing remarks & announcements"
