add the title of jemma's keynote

--- a/src/_data/schedule/day_two.yml
+++ b/src/_data/schedule/day_two.yml
@@ -6,7 +6,7 @@
   title: "Welcome Address"
 - start_at: "9:10"
   end_at: "9:55"
-  title: "Keynote"
+  title: "Keynote: Popping into Ruby"
   speaker_id: jemma-issroff
 #   slides_url:
 #   youtube_id:
