add a redirect /notgoing

--- a/netlify.toml
+++ b/netlify.toml
@@ -17,3 +17,7 @@
 [[redirects]]
   from = "/tickets"
   to = "https://www.eventpop.me/e/15095/rubyconfth-2023"
+
+[[redirects]]
+  from = "/notgoing"
+  to = "https://www.eventpop.me/e/15095/rubyconfth-2023#ticket_types_41411"
