--- a/src/_data/sponsors.yml
+++ b/src/_data/sponsors.yml
@@ -20,7 +20,7 @@
   level: gold
 - name: The Urban Office
   about: TODO
-  logo_url: /images/sponsors/urbanoffice.svg
+  logo_url: /images/sponsors/urbanoffice.jpg
   url: "https://www.theurbanoffice.com/"
   level: gold
 - name: Bluethumb
