--- a/src/_data/sponsors.yml
+++ b/src/_data/sponsors.yml
@@ -24,7 +24,7 @@
   url: "https://www.theurbanoffice.com/"
   level: gold
 - name: Bluethumb
-  about: TODO
+  about: We make discovering artists & buying art easy. We represent over 20,000 emerging and established artists from Australia and work with 20 of Australia's most remote Aboriginal Art Centres to give you access to more Australian artists and their art than anywhere else in the world.
   logo_url: /images/sponsors/bluethumb.svg
   url: "https://tech.blueth.mb/"
   level: silver
