Add Katrina's talk to the schedule

--- a/src/_data/schedule/day_one.yml
+++ b/src/_data/schedule/day_one.yml
@@ -50,8 +50,8 @@
 #   youtube_id:
 - start_at: "14:35"
   end_at: "15:05"
-  title: "Introducing Living Documentation"
-  speaker_id: steven-r-baker
+  title: "Cultivating Instinct"
+  speaker_id: katrina-owen
 #   slides_url:
 #   youtube_id:
 - start_at: "15:05"
