Remove links from Katrina's bio

--- a/src/_data/speakers.yml
+++ b/src/_data/speakers.yml
@@ -132,7 +132,7 @@
   last_name: Owen
   type: speaker
   photo_url: /images/speakers/katrina-owen.jpg
-  bio: Katrina has worked as a professional software developer for 18 years. She is the co-author of <a href="https://sandimetz.com/99bottles">99 Bottles of OOP</a>. Katrina is probably most well known for creating <a href="https://exercism.org/">Exercism</a> - a free, not-for-profit coding education platform powered by a wonderful volunteer community, that serves over 1.5 million users.
+  bio: Katrina has worked as a professional software developer for 18 years. She is the co-author of 99 Bottles of OOP. Katrina is probably most well known for creating Exercism - a free, not-for-profit coding education platform powered by a wonderful volunteer community, that serves over 1.5 million users.
   social_url: https://twitter.com/kytrinyx
   social_type: twitter
   website: https://exercism.github.io/kytrinyx/
