--- a/src/_data/sponsors.yml
+++ b/src/_data/sponsors.yml
@@ -35,7 +35,7 @@
   level: gold
 - name: Rakuten Viki
   about: The heart of Asian entertainment. Watch Korean Dramas, Chinese Dramas and Movies Online.
-  logo_url: /images/sponsors/wnb-rb.png
+  logo_url: /images/sponsors/viki.png
   url: "https://viki.com/"
   level: speaker
 - name: WNB.rb
