--- a/src/_data/schedule/day_two.yml
+++ b/src/_data/schedule/day_two.yml
@@ -21,7 +21,7 @@
   title: "Coffee Break"
 - start_at: "10:50"
   end_at: "11:20"
-  title: "Avoiding Disaster: Practical Strategies for Incident Prevention"
+  title: "Avoiding Disaster: Practical Strategies for Error Handling"
   speaker_id: huy-du
 #   slides_url:
 #   youtube_id:
