--- a/src/_data/schedule/day_one.yml
+++ b/src/_data/schedule/day_one.yml
@@ -52,7 +52,7 @@
   end_at: "15:05"
   title: "Cultivating Instinct"
   speaker_id: katrina-owen
-#   slides_url:
+  slides_url: "https://speakerdeck.com/kytrinyx/cultivating-instinct"
 #   youtube_id:
 - start_at: "15:05"
   end_at: "15:35"
@@ -61,7 +61,7 @@
   end_at: "16:05"
   title: "Data indexing with RGB (Ruby, Graphs and Bitmaps)"
   speaker_id: benji-lewis
-#   slides_url:
+  slides_url: "https://docs.google.com/presentation/d/1hDWt4JQXVrPcrdmFWSSCVI9LYn-ZdPaS5ZhTVMBFoZI/edit?usp=sharing"
 #   youtube_id:
 - start_at: "16:10"
   end_at: "16:55"
