--- a/src/_data/schedule/day_one.yml
+++ b/src/_data/schedule/day_one.yml
@@ -37,7 +37,7 @@
   end_at: "12:30"
   title: "Big Corps, Big Worries. Some points on selling Ruby to Big Corps."
   speaker_id: chakrit-wichian
-#   slides_url:
+  slides_url: "https://drive.google.com/file/d/1c7MrY73gQR--LnM4VfIvjICjTsjr-PQ5/view"
 #   youtube_id:
 - start_at: "12:30"
   end_at: "13:50"
