--- a/src/_data/schedule/day_one.yml
+++ b/src/_data/schedule/day_one.yml
@@ -67,7 +67,7 @@
   end_at: "16:55"
   title: "Keynote: Breaking Barriers — Empowering the Unbanked with Innovative Tech"
   speaker_id: bernard-banta
-#   slides_url:
+  slides_url: "https://speakerdeck.com/banta/breaking-barriers-empowering-the-unbanked-with-innovative-tech"
 #   youtube_id:
 - start_at: "17:00"
   end_at: "17:10"
