Fix wrong video

--- a/src/_data/schedule/day_one.yml
+++ b/src/_data/schedule/day_one.yml
@@ -15,7 +15,7 @@
   title: "Component Driven UI with ViewComponent gem"
   speaker_id: radoslav-stankov
   slides_url: "https://speakerdeck.com/rstankov/component-driven-ui-with-viewcomponent-gem"
-  youtube_id: f02fB2gEg6k
+  youtube_id: ar8RMbDPoSY
 - start_at: "10:30"
   end_at: "10:50"
   title: "Coffee Break"
