--- a/src/_data/schedule/day_one.yml
+++ b/src/_data/schedule/day_one.yml
@@ -68,7 +68,7 @@
   title: "Keynote: Breaking Barriers — Empowering the Unbanked with Innovative Tech"
   speaker_id: bernard-banta
   slides_url: "https://speakerdeck.com/banta/breaking-barriers-empowering-the-unbanked-with-innovative-tech"
-  youtube_id: youtube_id: oRtgSlJeiuw
+  youtube_id: oRtgSlJeiuw
 - start_at: "17:00"
   end_at: "17:10"
   title: "Closing remarks & announcements"
